--- a/style.css
+++ b/style.css
@@ -7,64 +7,76 @@
 
 body {
     display: flex;
-}
-
-.img_fundo {
-    background: url(/img/foto_de_fundo.jpg);
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.144);
-    background-position: center top;
-    background-size: cover;
+}
+
+.fundo {
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.144);
 }
 
 .escurecer {
-    width: 100vh;
-    background-color: rgba(0, 0, 0, 0.493);
+    width: 100vw;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.205);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    top: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.712);
+    border-radius: 20px;
+    margin-top: 5vh;
+    margin-bottom: 4vh;
 }
 
 .foto_de_perfil {
-    width: 18vh;
-    position: fixed;
-    top: 10vh;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
     border: solid #fff 2px;
     border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-}
-
-.info {
-    position: fixed;
-    top: 20vh;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    width: 100%;
+    margin-bottom: 20px;
 }
 
 .nome {
     font-family: 'Garamond', serif;
-    font-size: 5vh;
-    color: black(0, 0, 255, 0.9);
+    font-size: 80px;
+    color: rgba(255, 255, 255, 0.866);
+    margin-bottom: 5px;
 }
 
 .descricao {
-    margin-top: 0;
     font-family: 'Garamond', serif;
-    font-size: 2.5vh;
+    font-size: 45px;
     color: rgba(255, 255, 255, 0.689);
 }
 
 .conjunto_botoes {
-    margin: auto;
-    margin-top: 6vh;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 1vh;
-    display: flex;
+    margin-bottom: 5vh;
 }
 
 .botao_redirecionador {
@@ -79,97 +91,34 @@ body {
     height: 10vh;
     background-color: rgba(0, 0, 0, 0.47);
     border-radius: 40px;
+    transition: all .3s ease-in;
 }
 
 .botao_redirecionador:hover {
     scale: 1.02;
-    transition: all .3s ease-in;
     color: black;
     background-color: rgba(255, 255, 255, 0.719);
 }
 
 /* Media Screen para telas menores */
-@media screen and (min-width: 1870px) 
-{
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
+@media screen and (max-width: 448px) {
     .foto_de_perfil {
         width: 20vh;
         height: 20vh;
-        position: fixed;
-        top: 13vh;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border: solid #fff 2px;
-        border-radius: 50%;
-        overflow: hidden;
-        object-fit: cover;
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+        margin-bottom: 20px;
     }
-
+    .container{
+        scale: 0.85;
+    }
     .nome {
-            font-family: 'Garamond', serif;
-            font-size: 10vh;
-            color: black(0, 0, 255, 0.9);
+        font-size: 60px;
     }
     
     .descricao {
-        font-size: 5vh; /* Ajuste do tamanho da fonte para telas menores */
-        color: white;
+        font-size: 40px; 
     }
 
-    .img_fundo {
-        background: rgba(0, 0, 0, 0.5);
-        height: 100vh;
-        display: flex;
-    }
-
-    .info {
-        position: fixed;
-        top: 150px;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
-        width: 100%;
-    }
-
-    .escurecer{
-        background-color: rgba(255, 255, 255, 0.603);
-        width: 100%;
-    }
-
-    .conjunto_botoes {
-        margin: auto;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 10px;
-        display: flex;
-        max-width: 700px;
-    }
-    
     .botao_redirecionador {
-        align-items: center;
-        text-align: center;
-        padding: 15px;
-        text-decoration: none;
-        font-size: 7vh; 
-        color: rgba(255, 255, 255, 0.9);
-        display: block;
-        width: 400px;
-        height: 80px;
-        background-color: rgba(0, 0, 0, 0.8);
-        border-radius: 20px;
+        font-size: 35px;
     }
-    
-    .botao_redirecionador:hover {
-        scale: 1.02;
-        transition: all .3s ease-in;
-        color: black;
-        background-color: rgba(255, 255, 255, 0.719);
-    }
-
 }
