--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+/* Colocar Os botões sendo uma imagem da página que ela vai ser redirecionada */
 header {
     width: 100vw;
     height: 100px;
